fix: fix display glitch time cards
translateY created a glitch on firefox that prevented it to cover the whole width. Plus you could see the colored container under on the corners because of border radius.

--- a/css/main.css
+++ b/css/main.css
@@ -306,7 +306,7 @@ input[type=submit] {
 
 .time-card__text-container {
   width: 100%;
-  transform: translateY(1px);
+  border-radius: 0.8rem;
   /* mixin mq */
   /* end mixin mq */
 }
